<fix>align form result button menu page

--- a/css/style.css
+++ b/css/style.css
@@ -813,6 +813,12 @@ a {
     transform: scale(1.3);
   }
 }
+@media screen and (min-width: 992px) {
+  .form__result-button {
+    align-self: flex-end;
+    margin: 0 auto;
+  }
+}
 
 .filterbutton {
   height: 75px;
