--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -1,11 +1,13 @@
 .form__result-button {
 	height: 50px;
 	width: 220px;
-
 	margin-top: auto;
-
 	@include tablet {
 		transform: scale(1.3);
+	}
+	@include desktop {
+		align-self: flex-end;
+		margin: 0 auto;
 	}
 	background: linear-gradient(to top, $first-color, $second-color);
 	border: 0px solid;
